--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
   <button id="btn">compute</button>
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the cups to oz<br> 
+    What is the cups to oz converter?<br>
+    The cups to oz converter is a tool that converts cups to ounces and vice versa.<br>
+    How to calculate cups to oz?<br>
+    To calculate cups to oz you should use the following formula:<br>
+    1 cup = 8 ounces<br>
+    Why use cups to oz converter?<br>
+    The cups to oz converter is used in order to convert cups to ounces and vice versa.<br>
+</p>
   <script src="app.js"></script>
 </body>
 </html>
